--- a/EveOnlineApp.csproj
+++ b/EveOnlineApp.csproj
@@ -98,6 +98,7 @@
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
+    <Compile Include="EveItemModel.cs" />
     <Compile Include="EveObjModel.cs" />
     <Compile Include="MainPage.xaml.cs">
       <DependentUpon>MainPage.xaml</DependentUpon>
