--- a/EveOnlineApp.csproj
+++ b/EveOnlineApp.csproj
@@ -100,6 +100,7 @@
     </Compile>
     <Compile Include="EveItemModel.cs" />
     <Compile Include="EveObjModel.cs" />
+    <Compile Include="ItemDatabase.cs" />
     <Compile Include="MainPage.xaml.cs">
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
@@ -137,6 +138,9 @@
     </PackageReference>
     <PackageReference Include="Newtonsoft.Json">
       <Version>12.0.1</Version>
+    </PackageReference>
+    <PackageReference Include="System.Runtime.Serialization.Formatters">
+      <Version>4.3.0</Version>
     </PackageReference>
   </ItemGroup>
   <ItemGroup>
