--- a/EveOnlineApp.csproj
+++ b/EveOnlineApp.csproj
@@ -100,6 +100,7 @@
     </Compile>
     <Compile Include="EveItemModel.cs" />
     <Compile Include="EveObjModel.cs" />
+    <Compile Include="FileRW.cs" />
     <Compile Include="ItemDatabase.cs" />
     <Compile Include="MainPage.xaml.cs">
       <DependentUpon>MainPage.xaml</DependentUpon>
